Update requirements.txt with new packages
Added additional dependencies for Flask and data handling.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 Flask==3.0.3
-requests==2.32.3
-urllib3==2.2.3
-pytz==2024.1
+Flask-Login==0.6.3
+Flask-Bcrypt==1.0.1
 gunicorn==22.0.0
+requests==2.32.3
 beautifulsoup4==4.12.3
 lxml==5.3.0
+html5lib==1.1
+pandas==2.2.3
+openpyxl==3.1.5
+python-dateutil==2.9.0.post0
+urllib3==2.2.2
+Jinja2==3.1.4
+Werkzeug==3.0.4
+itsdangerous==2.2.0
+MarkupSafe==2.1.5
