--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,10 @@ Jinja2==3.1.4
 Werkzeug==3.0.4
 itsdangerous==2.2.0
 MarkupSafe==2.1.5
-openai==1.52.2
+openai>=1.51.0
 pdfminer.six==20231228
 httpx==0.27.0
+
 
 
 
