--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
+# -------------------------
+# 🔧 Dependências principais do Flask
+# -------------------------
 Flask==3.0.3
 Flask-Login==0.6.3
 Flask-Bcrypt==1.0.1
-gunicorn==22.0.0
+
+# -------------------------
+# 📦 Utilitários
+# -------------------------
 requests==2.32.3
 beautifulsoup4==4.12.3
-lxml==5.3.0
-html5lib==1.1
-pandas==2.2.3
-openpyxl==3.1.5
-python-dateutil==2.9.0.post0
-urllib3==2.2.2
-Jinja2==3.1.4
-Werkzeug==3.0.4
-itsdangerous==2.2.0
-MarkupSafe==2.1.5
+pdfminer.six==20240706
+python-dotenv==1.0.1
+
+# -------------------------
+# 🧠 OpenAI SDK (nova geração)
+# -------------------------
 openai>=1.51.0
-pdfminer.six==20231228
-httpx==0.27.0
 
-
-
-
-
+# -------------------------
+# 🧰 Outras dependências do projeto
+# -------------------------
+gunicorn==23.0.0
+sqlite3-binary==0.0.1
