--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,6 @@ python-dotenv==1.0.1
 openai>=1.51.0
 
 # -------------------------
-# 🧰 Outras dependências do projeto
+# 🧰 Servidor WSGI para Render
 # -------------------------
 gunicorn==23.0.0
-sqlite3-binary==0.0.1
